syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.service";
option java_outer_classname = "Message";
option objc_class_prefix = "HLW";

package service;

service Service {
  rpc getRecommendMovies(RecommendMovieRequest) returns (RecommendMovieResponse){}
}

message RecommendMovieRequest{
  uint64 user_id = 1;
  uint64 recommend_way = 2;
}

message RecommendMovieResponse{
  repeated Movie  movie = 1;
}

message Movie{
  uint64 movie_id = 1;
  string title = 2;
}

message UserProfile{
  uint64 user_id = 1;
  float avg_score = 2;
  repeated uint64 userTag = 3;
}

message MovieProfile{
  uint64 movie_id = 1;
  float avg_score = 2;
  repeated uint64 movieTag = 3;
  string title = 4;
}